# openCV_demo

./: LICENSE  README
Record_proj/: 1_DownloadAndInstallation.txt  2_TestInstallation.txt
Source_code/2_TestInstallation/: CMakeLists.txt  DisplayImage.cpp
Source_code/3_TestVideoCapture/: CMakeLists.txt  ShowImage.cpp  ShowImage.hpp  TestCameraCapture.cpp
